refactor: user domain refactoring